# offline-dem-simulation-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  Silo_discharge.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
data/synthetic/: discharge.csv  layers.csv  silos.csv  suppliers.csv
docs/: api_integration_flow.txt  inputs_outputs_overview.md  ui-ux-m1-foundation.md  ui-ux-m8-handoff.md
migrations/: 001_phase1_persistence.sql
outputs/latest/: lot_contributions.csv  lot_state_ledger.csv  segment_contributions.csv  segment_state_ledger.csv  silo_state_ledger.csv  summary.json
scripts/: db_sanity_check.py  run_example.py
src/dem_sim/: __init__.py  charger.py  cli.py  db.py  db_models.py  io.py  model.py  reporting.py  sample_data.py  schema.py  service.py  state.py  storage.py  synthetic.py  web.py
src/dem_sim/ui/: app.js  index.html  styles.css
tests/: conftest.py  test_lifecycle_silos.py  test_model_equivalence.py  test_model_performance.py  test_model_validation.py  test_physics_improvements.py  test_process_run_simulation.py  test_smoke.py  test_web_api.py
