[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-dem-simulation-engine"
version = "0.1.0"
description = "Offline DEM-inspired silo discharge and blend simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
dem-sim = "dem_sim.cli:main"
dem-sim-web = "dem_sim.web:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
